[gd_scene load_steps=4 format=3 uid="uid://bx8k7oam3pqrs"]

[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_title"]
[ext_resource type="FontFile" uid="uid://bqwu1c5grvybc" path="res://fonts/SpecialElite-Regular.ttf" id="2_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 0.8, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="TitleScreen" type="CanvasLayer"]
layer = 100
script = ExtResource("1_title")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BackgroundBlur" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.5)
z_index = 1

[node name="BlurOverlay" type="ColorRect" parent="Control"]
material = null
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)
z_index = 2

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
z_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="TitleLabel" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 96
text = "ER339: Road to The End of Things"
horizontal_alignment = 1

[node name="ButtonContainer" type="CenterContainer" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="TakeTheWheelButton" type="Button" parent="Control/CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
text = "Take the Wheel"
